# ghostinthemini

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ghostinthemini/: __init__.py  __main__.py  config.py  main.py  scheduler.py  slack_bot.py
tests/: __init__.py  test_main.py  test_scheduler.py  test_slack_bot.py
